examples/kong-k8s/echo/gateway-stage.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: stage
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "echo-stage.com"
    port:
      name: http
      number: 80
      protocol: HTTP
