examples/kong-k8s/echo/virtualservice-prod.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
  namespace: prod
spec:
  gateways:
  - echo-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: kong-proxy-kong-proxy
        port:
          number: 80
